# QuadNet

./: Motion_txt2csv.py  frames.gv
networkTrain/: DeepQMP-HoundDataGeneration.ipynb  GenerateTestTerrain.ipynb  GenterrainLatent.ipynb  Motion_txt2csv.ipynb  QuadNet.ipynb  QuadNet_new.ipynb  TerrainEncoder.ipynb  TerrainEncoder64.ipynb
networkTrain/.ipynb_checkpoints/: DeepQMP-HoundDataGeneration-checkpoint.ipynb
src/data/towr_data_generator/: CMakeLists.txt  package.xml
src/data/towr_data_generator/msg/: towrGen_msgs.msg
src/data/towr_data_generator/src/: TOWR_data_generator.cpp  TOWR_data_generator0.cpp  TOWR_motion_data_generator.cpp  TOWR_terrain.cpp
src/planner/DeepQMP/: CMakeLists.txt  package.xml
src/planner/DeepQMP/.ipynb_checkpoints/: DeepQMP-checkpoint.ipynb  DeepQMP_old-checkpoint.ipynb
src/planner/DeepQMP/model/obsolete/: DeepQMP_W_O adversarial loss.tar  DeepQMP_with_adversarial loss.tar  LSTMsNN.tar
src/planner/DeepQMP/src/: DeepQMP0.py  DeepQMP_100x100terrain.py  DeepQMP_64x64terrain.py  DeepQMP_No_terrain.py  DeepQMP_play.py
src/planner/DeepQMP/src/Obsolete/: DeepQMP.cpp  DeepQMP.ipynb  DeepQMP0.py  DeepQMP_old.ipynb  DeepQMP_old.py  DeepQMP_old2.py
src/planner/ifopt/ifopt_core/src/: problem.cc
src/planner/ifopt/ifopt_ipopt/src/: ipopt_adapter.cc
src/planner/towr/towr/include/towr/: nlp_formulation.h  parameters.h
src/planner/towr/towr/include/towr/models/: robot_model.h
src/planner/towr/towr/include/towr/models/examples/: champ_model.h  hound_model.h  laikago_model.h
src/planner/towr/towr/include/towr/terrain/: height_map.h
src/planner/towr/towr/include/towr/terrain/examples/: height_map_examples.h
src/planner/towr/towr/src/: height_map.cc  height_map_examples.cc  nlp_formulation.cc  nodes_variables.cc  nodes_variables_phase_based.cc  parameters.cc  quadruped_gait_generator.cc  robot_model.cc
src/planner/towr/towr_ros/: CMakeLists.txt  package.xml
src/planner/towr/towr_ros/include/towr_ros/: towr_ros_interface.h  towr_user_interface.h
src/planner/towr/towr_ros/launch/: towr_ros.launch
src/planner/towr/towr_ros/msg/: TowrCommand.msg
src/planner/towr/towr_ros/rviz/: xpp_towr.rviz
src/planner/towr/towr_ros/src/: goal_pose_publisher.cc  joint_pose_translator.cpp  rviz_terrain_publisher.cc  towr_ros_interface.cc  towr_user_interface.cc
src/planner/xpp/robots/xpp_champ/launch/: champ.launch
src/planner/xpp/robots/xpp_hound/: CMakeLists.txt  package.xml
src/planner/xpp/robots/xpp_hound/include/xpp_hound/: hound_inverse_kinematics.h  inverse_kinematics_hound.h
src/planner/xpp/robots/xpp_hound/launch/: hound.launch
src/planner/xpp/robots/xpp_hound/rviz/: xpp_hound.rviz
src/planner/xpp/robots/xpp_hound/src/: hound_inverse_kinematics.cc  inverse_kinematics_hound.cc
src/planner/xpp/robots/xpp_hound/src/exe/: urdf_visualizer_hound.cc
src/planner/xpp/robots/xpp_laikago/: CMakeLists.txt  package.xml
src/planner/xpp/robots/xpp_laikago/include/xpp_laikago/: inverse_kinematics_laikago.h  laikago_inverse_kinematics.h
src/planner/xpp/robots/xpp_laikago/launch/: laikago.launch
src/planner/xpp/robots/xpp_laikago/rviz/: xpp_laikago.rviz
src/planner/xpp/robots/xpp_laikago/src/: inverse_kinematics_laikago.cc  laikago_inverse_kinematics.cc
src/planner/xpp/robots/xpp_laikago/src/exe/: urdf_visualizer_laikago.cc
src/planner/xpp/xpp_vis/src/: rviz_robot_builder.cc
src/robots/descriptions/Hound/: CMakeLists.txt  Hound.xml  package.xml
src/robots/descriptions/Hound/config/rviz/: standalone.rviz
src/robots/descriptions/Hound/launch/: load.launch  standalone.launch
src/robots/descriptions/Hound/meshes/: base__.dae  calf_.STL  calf_.dae  calf__.dae  shoulder_.STL  shoulder_.dae  shoulder__.dae  shoulder_mirror_.STL  shoulder_mirror_.dae  shoulder_mirror__.dae  thigh_.STL  thigh__.dae  thigh_mirror_.STL  thigh_mirror__.dae
src/robots/descriptions/Hound/urdf/: Hound.urdf  Hound_description.gv
