<?xml version="1.0"?>
<package format="2">
  <name>towr_data_generator</name>
  <version>0.0.0</version>
  <description>The data_generator package</description>
  <maintainer email="mrjohd@todo.todo">mrjohd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>ros_cpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
